--- a/findhotel.css
+++ b/findhotel.css
@@ -2,13 +2,16 @@
   margin: 0;
   padding: 0;
 }
+
 div.baseWidth {
   width: 1000px;
   margin: 0 auto;
 }
+
 div.clearflix {
   overflow: hidden;
 }
+
 div.header {
   background-color: yellow;
   background-repeat: no-repeat;
@@ -16,27 +19,32 @@ div.header {
   height: 577px;
   z-index: -1;
 }
+
 div.topHeader {
   width: 100%;
   height: 70px;
   background-color: #ffffff;
   position: relative;
 }
+
 div.logoTop {
   width: 200px;
   height: 100%;
   /* background-color: #ffc43d; */
 }
+
 div.searchArea {
   width: 100%;
   height: 577px;
 }
+
 h1#bannerText {
   position: relative;
   top: 8%;
   text-align: center;
   text-transform: capitalize;
 }
+
 div.searchBox {
   width: 100%;
   height: 30%;
@@ -45,6 +53,7 @@ div.searchBox {
   top: 10%;
   opacity: 0.9;
 }
+
 input#placeSearch {
   width: 255px;
   height: 22px;
@@ -53,6 +62,7 @@ input#placeSearch {
   margin-top: 6%;
   border-bottom: 2px solid tomato;
 }
+
 select#room {
   width: 250px;
   height: 46px;
@@ -61,32 +71,38 @@ select#room {
   margin-top: 6%;
   border-bottom: 2px solid tomato;
 }
+
 .datebox {
   width: 15%;
   height: 25px;
 }
+
 .checkinposition {
   position: relative;
   margin-left: 2%;
   margin-top: 6%;
   padding: 10px;
 }
+
 .checkoutposition {
   position: relative;
   margin-left: 2%;
   margin-top: 6%;
   padding: 10px;
 }
+
 label#checkin {
   position: absolute;
   margin-left: 2%;
   margin-top: 4%;
 }
+
 label#checkout {
   position: absolute;
   margin-left: 2%;
   margin-top: 4%;
 }
+
 input#searchButton {
   display: block;
   width: 30%;
@@ -98,17 +114,25 @@ input#searchButton {
   color: white;
   border-radius: 15px;
 }
+
 input#searchButton:hover {
   background-color: rgb(235, 50, 50);
   transition: 0.6s;
   transform: scale(1.1);
+  cursor: pointer;
 }
+
+input#searchButton:focus {
+  outline: none;
+}
+
 div.contentSection {
   background-color: #95ececba;
   height: 580px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
 /* ############## Image Container ############ */
 div.imgcontainer {
   background-color: #cde9e700;
@@ -126,6 +150,7 @@ div.layout2img {
   margin: 0 auto;
   background-color: rgba(255, 35, 35, 0);
 }
+
 div.saintmartins {
   box-sizing: border-box;
   width: 49%;
@@ -143,6 +168,7 @@ div.ctghilltracts {
   background-color: #a7bcb5;
   border-radius: 5px;
 }
+
 /* ########## 3 image layout starts here ######## */
 div.layout3img {
   position: relative;
@@ -160,6 +186,7 @@ div.sajekvalley {
   background-color: lightseagreen;
   border-radius: 5px;
 }
+
 div.sundarbans {
   width: 32%;
   height: 100%;
@@ -167,6 +194,7 @@ div.sundarbans {
   background-color: #bbc7bd;
   border-radius: 5px;
 }
+
 div.srimangal {
   width: 32%;
   height: 100%;
@@ -174,9 +202,14 @@ div.srimangal {
   background-color: #9ac560;
   border-radius: 5px;
 }
+
 .threeimgcenter {
-  display: flex; /* establish flex container */
-  flex-direction: row; /* default value; can be omitted */
-  flex-wrap: nowrap; /* default value; can be omitted */
-  justify-content: space-between; /* switched from default (flex-start, see below) */
+  display: flex;
+  /* establish flex container */
+  flex-direction: row;
+  /* default value; can be omitted */
+  flex-wrap: nowrap;
+  /* default value; can be omitted */
+  justify-content: space-between;
+  /* switched from default (flex-start, see below) */
 }
